# nyc-lyft-vs-uber

./: .env-example  .gitignore  __init__.py  create_blocks.py  deploy_locally.py  pyproject.toml  readme.md
docker_sql/: ad-hoc-cmds.md  ingest_data.py  pipeline.py  upload-data.ipynb
docker_sql/.ipynb_checkpoints/: upload-data-checkpoint.ipynb
flows/: dbt_build.py  gcs_to_bq.py  pyproject.toml  web_to_bq.py  web_to_gcs.py
minimal_gcloudrun/: main.py  readme.md
nyc_taxi_dbt/: dbt_project.yml
nyc_taxi_dbt/models/: rpt.sql  schema.yml  sources.yml  stg_latest_date.sql  stg_rides.sql  wait_time.sql
quickstart_dbt/: dbt_project.yml
quickstart_dbt/models/: docs.md  schema.yml
terraform/: main.tf  variables.tf
terraform_gcp/: main.tf  notes.md
week_1_basics_n_setup/1_terraform_gcp/: main.tf  notes.md
week_1_basics_n_setup/2_docker_sql/: Dockerfile  Untitled.ipynb  ad-hoc-cmds.md  docker-compose.yaml  ingest_data.py
week_2_workflow_orchestration/: Dockerfile  gcs_to_bq.py  prefect.yaml  readme.md  requiresments.txt  web_to_gcs.py
workflow_orchestration/: gcs_to_bq.py  local_deploy.py  prefect.yaml  pyproject.toml  readme.md  web_to_bq.py  web_to_gcs.py
